--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="./css/mobile.css">
   <link rel="stylesheet" href="./css/themes.css">
 </head>
-<body>
+<body class="d-flex align-items-center justify-content-center">
   
   <div class="container-md d-flex flex-column align-items-center justify-content-center mb-4">
 
