--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="d-flex align-items-center justify-content-center">
   
-  <div class="container-md d-flex flex-column align-items-center justify-content-center mb-4">
+  <div class="main-container container-md d-flex flex-column align-items-center justify-content-center mb-4">
 
   
   <!-- TOP GRID -->
