--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <link rel="stylesheet" href="./css/bootstrap-grid.css">
   <link rel="stylesheet" href="./css/mobile.css">
   <link rel="stylesheet" href="./css/themes.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700;800&display=swap" rel="stylesheet">
+  <style>
+    *{
+      font-family: 'League Spartan', sans-serif;
+    }
+</style>
 </head>
 <body class="d-flex align-items-center justify-content-center">
   
